--- a/Maui/SimpleWeather.Maui/Main/WeatherAQIPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherAQIPage.xaml
@@ -1,13 +1,84 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<viewModels:ViewModelPage
     x:Class="SimpleWeather.Maui.Main.WeatherAQIPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="WeatherAQIPage">
-    <VerticalStackLayout>
-        <Label
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:local="clr-namespace:SimpleWeather.Maui.Main"
+    xmlns:graphs="clr-namespace:SimpleWeather.NET.Controls.Graphs"
+    xmlns:graphPanels="clr-namespace:SimpleWeather.Maui.Controls.Graphs"
+    xmlns:controls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
+    xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
+    xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
+    Title="{x:Static res_strings:Resources.label_airquality}"
+    Shell.NavBarIsVisible="True"
+    x:Name="AQIPage">
+
+    <ContentPage.Resources>
+        <converters:DoubleToBooleanConverter x:Key="invValueBooleanConverter" GreaterThan="0" IsInverse="True" />
+        <converters:ObjectToCollectionConverter x:Key="objToCollectionConv" />
+        <DataTemplate x:Key="AQIForecastTemplate" x:DataType="{x:Type controls:AirQualityViewModel}">
+            <VerticalStackLayout>
+                <Label
+                    Padding="16,10"
+                    FontSize="16"
+                    FontFamily="OpenSansSemibold"
+                    Text="{Binding Date}" />
+                <localControls:AQIForecastControl />
+            </VerticalStackLayout>
+        </DataTemplate>
+        <DataTemplate x:Key="AQIGraphTemplate" x:DataType="{x:Type graphs:BarGraphData}">
+            <VerticalStackLayout>
+                <Label
+                    Padding="16,10"
+                    FontSize="16"
+                    FontFamily="OpenSansSemibold"
+                    Text="{Binding GraphLabel}" />
+                <graphPanels:BarGraphPanel GraphData="{Binding}" />
+            </VerticalStackLayout>
+        </DataTemplate>
+        <local:AQIDataTemplateSelector
+            x:Key="aqiTemplateSelector"
+            AQIForecastTemplate="{StaticResource AQIForecastTemplate}"
+            AQIGraphTemplate="{StaticResource AQIGraphTemplate}" />
+    </ContentPage.Resources>
+
+    <Grid VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <VerticalStackLayout Grid.Row="0">
+            <localControls:ViewBox HeightRequest="48" HorizontalOptions="Start"
+                                   BindingContext="{Binding Source={x:Reference AQIPage}, Path=WNowViewModel}">
+                <Label Padding="16" FontSize="16" HorizontalTextAlignment="Start" HorizontalOptions="Start"
+                       Text="{Binding Weather.Location, FallbackValue='New York, NY', Mode=OneWay}" />
+            </localControls:ViewBox>
+            <Rectangle HeightRequest="1" StrokeThickness="1" Stroke="{AppThemeBinding Light={StaticResource LightOutline}, Dark={StaticResource DarkOutline}}" />
+        </VerticalStackLayout>
+        <ScrollView Grid.Row="1">
+            <VerticalStackLayout x:Name="AQILayout" MaximumWidthRequest="1280">
+                <VerticalStackLayout>
+                    <Label
+                        Padding="16,10"
+                        FontSize="16"
+                        FontFamily="OpenSansSemibold"
+                        Text="{x:Static res_strings:Resources.time_current}" />
+                    <localControls:AQIForecastControl
+                        x:Name="AQIndexControl"
+                        BindingContext="{Binding Source={x:Reference AQIPage}, Path='WNowViewModel.Weather.AirQuality', Mode=OneWay}" />
+                </VerticalStackLayout>
+                <VerticalStackLayout
+                    x:Name="AQIContainer"
+                    BindableLayout.ItemTemplateSelector="{StaticResource aqiTemplateSelector}" />
+            </VerticalStackLayout>
+        </ScrollView>
+        <ActivityIndicator
+            x:Name="ContentIndicator"
+            Grid.Row="1"
             HorizontalOptions="Center"
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+            VerticalOptions="Center"
+            IsRunning="True" />
+    </Grid>
+</viewModels:ViewModelPage>
