--- a/Maui/SimpleWeather.Maui/Main/WeatherChartsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherChartsPage.xaml
@@ -1,13 +1,81 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<viewModels:ViewModelPage
     x:Class="SimpleWeather.Maui.Main.WeatherChartsPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="WeatherChartsPage">
-    <VerticalStackLayout>
-        <Label
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:local="clr-namespace:SimpleWeather.Maui.Main"
+    xmlns:graphs="clr-namespace:SimpleWeather.NET.Controls.Graphs"
+    xmlns:graphPanels="clr-namespace:SimpleWeather.Maui.Controls.Graphs"
+    xmlns:controls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
+    xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
+    xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
+    Title="{x:Static res_strings:Resources.pref_title_feature_charts}"
+    Shell.NavBarIsVisible="True"
+    x:Name="ChartsPage">
+
+    <ContentPage.Resources>
+        <converters:DoubleToBooleanConverter x:Key="invValueBooleanConverter" GreaterThan="0" IsInverse="True" />
+        <converters:ObjectToCollectionConverter x:Key="objToCollectionConv" />
+        <DataTemplate x:Key="LineViewDataTemplate" x:DataType="{x:Type graphs:LineViewData}">
+            <VerticalStackLayout>
+                <Label
+                    Padding="16,10"
+                    FontSize="16"
+                    FontFamily="OpenSansSemibold"
+                    Text="{Binding GraphLabel}" />
+                <graphPanels:ForecastGraphPanel Margin="16,0" GraphData="{Binding}" />
+            </VerticalStackLayout>
+        </DataTemplate>
+        <DataTemplate x:Key="BarChartDataTemplate" x:DataType="{x:Type graphs:BarGraphData}">
+            <VerticalStackLayout>
+                <Label
+                    Padding="16,10"
+                    FontSize="16"
+                    FontFamily="OpenSansSemibold"
+                    Text="{Binding GraphLabel}" />
+                <graphPanels:BarGraphPanel Margin="16,0" GraphData="{Binding}" />
+            </VerticalStackLayout>
+        </DataTemplate>
+        <local:ChartsDataTemplateSelector
+            x:Key="chartsDataTemplateSelector"
+            LineViewTemplate="{StaticResource LineViewDataTemplate}"
+            BarChartTemplate="{StaticResource BarChartDataTemplate}" />
+    </ContentPage.Resources>
+
+    <Grid VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <VerticalStackLayout Grid.Row="0">
+            <localControls:ViewBox HeightRequest="48" HorizontalOptions="Start"
+                                   BindingContext="{Binding Source={x:Reference ChartsPage}, Path=WNowViewModel}">
+                <Label Padding="16" FontSize="16" HorizontalTextAlignment="Start" HorizontalOptions="Start"
+                       Text="{Binding Weather.Location, FallbackValue='New York, NY', Mode=OneWay}" />
+            </localControls:ViewBox>
+            <Rectangle HeightRequest="1" StrokeThickness="1" Stroke="{AppThemeBinding Light={StaticResource LightOutline}, Dark={StaticResource DarkOutline}}" />
+        </VerticalStackLayout>
+        <CollectionView
+            x:Name="ListControl"
+            Grid.Row="1"
+            IsGrouped="False"
+            CanMixGroups="False"
+            CanReorderItems="False"
+            ItemSizingStrategy="MeasureAllItems"
+            SelectionMode="None"
+            ItemsSource="{x:Bind ChartsView.GraphModels, Mode=OneWay}"
+            ItemTemplate="{StaticResource chartsDataTemplateSelector}">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" ItemSpacing="16" />
+            </CollectionView.ItemsLayout>
+        </CollectionView>
+        <ActivityIndicator
+            x:Name="ContentIndicator"
+            Grid.Row="1"
             HorizontalOptions="Center"
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+            VerticalOptions="Center"
+            IsRunning="True" />
+    </Grid>
+</viewModels:ViewModelPage>
