--- a/Maui/SimpleWeather.Maui/Main/WeatherDetailsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherDetailsPage.xaml
@@ -1,13 +1,69 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<viewModels:ViewModelPage
     x:Class="SimpleWeather.Maui.Main.WeatherDetailsPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="WeatherDetailsPage">
-    <VerticalStackLayout>
-        <Label
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:controls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
+    xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
+    xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
+    Title="{x:Static res_strings:Resources.label_forecast}"
+    Shell.NavBarIsVisible="True"
+    x:Name="DetailsPage">
+
+    <ContentPage.Resources>
+        <converters:DoubleToBooleanConverter x:Key="invValueBooleanConverter" GreaterThan="0" IsInverse="True" />
+        <converters:ObjectToCollectionConverter x:Key="objToCollectionConv" />
+    </ContentPage.Resources>
+
+    <Grid VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <VerticalStackLayout Grid.Row="0">
+            <localControls:ViewBox HeightRequest="48" HorizontalOptions="Start"
+                                   BindingContext="{Binding Source={x:Reference DetailsPage}, Path=WNowViewModel}">
+                <Label Padding="16" FontSize="16" HorizontalTextAlignment="Start" HorizontalOptions="Start"
+                       Text="{Binding Weather.Location, FallbackValue='New York, NY', Mode=OneWay}" />
+            </localControls:ViewBox>
+            <Rectangle HeightRequest="1" StrokeThickness="1" Stroke="{AppThemeBinding Light={StaticResource LightOutline}, Dark={StaticResource DarkOutline}}" />
+        </VerticalStackLayout>
+        <CollectionView
+            x:Name="ListControl"
+            Grid.Row="1"
+            IsGrouped="False"
+            CanMixGroups="False"
+            CanReorderItems="False"
+            ItemSizingStrategy="MeasureAllItems"
+            RemainingItemsThreshold="24"
+            SelectionMode="None"
+            RemainingItemsThresholdReached="ListControl_RemainingItemsThresholdReached">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <localControls:WeatherDetailPanel Margin="0,0,0,8" />
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" />
+            </CollectionView.ItemsLayout>
+        </CollectionView>
+        <ActivityIndicator
+            x:Name="ContentIndicator"
+            Grid.Row="1"
             HorizontalOptions="Center"
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+            VerticalOptions="Center"
+            IsRunning="True" />
+        <localControls:IndeterminateProgressBar
+            x:Name="IncrementalIndicator"
+            Grid.Row="1"
+            VerticalOptions="End"
+            BaseColor="{AppThemeBinding Light={StaticResource LightSurfaceVariant},
+                                        Dark={StaticResource DarkSurfaceVariant}}"
+            HeightRequest="2"
+            IsActive="True"
+            ProgressColor="{AppThemeBinding Light={StaticResource LightPrimary},
+                                            Dark={StaticResource DarkPrimary}}" />
+    </Grid>
+</viewModels:ViewModelPage>
