--- a/Maui/SimpleWeather.Maui/Resources/Styles/Styles.xaml
+++ b/Maui/SimpleWeather.Maui/Resources/Styles/Styles.xaml
@@ -151,7 +151,8 @@
 
     <Style TargetType="Frame">
         <Setter Property="HasShadow" Value="False" />
-        <Setter Property="BorderColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray950}}" />
+        <Setter Property="BorderColor" Value="{AppThemeBinding Light={StaticResource LightOutline}, Dark={StaticResource DarkOutline}}" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightSurface}, Dark={StaticResource DarkSurface}}" />
         <Setter Property="CornerRadius" Value="8" />
     </Style>
 
