Settings_Icons: load icon providers asynchronously

--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
@@ -16,6 +16,11 @@
         <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
             <VerticalStackLayout x:Name="IconRadioContainer" />
         </ScrollView>
+        <ActivityIndicator
+            x:Name="LoadingRing"
+            IsRunning="True"
+            HorizontalOptions="Center"
+            VerticalOptions="Center" />
     </Grid>
 
 </ContentPage>
